[tool.poetry]
name = "erp"
version = "0.1.0"
description = ""
authors = ["sonalkr <sonalkr.78@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.105.0"
alembic = "^1.13.1"
sqlalchemy = "^2.0.23"
uvicorn = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
